+ Added comments to The Calamity and added an Example dialogue file with comments

--- a/Localization/Characters/en-US/TheCalamity.json
+++ b/Localization/Characters/en-US/TheCalamity.json
@@ -1,17 +1,24 @@
 {
-  "Name": "[c/FF0000:The Calamity]",
-  "Scale": 2,
+  "Name": "[c/FF0000:The Calamity]", //The name of the character acts as both a unique identifier for the character, as well as what gets displayed in the Name Box of the Default Dialogue Style. Here, a Color Tag is used to give it a red color!
+  "Scale": 2, //Scale is used to enlarge or shrink the Character Portrait. Since The Calamity's sprite is smaller than the standard portrait size, we scale it up 2x! The default value for this is 1. If you want your character portraits to not be scaled, there's no need to include this in your character!
 
-  "Expressions": [
+  "Expressions": [ //Expressions are individual portraits that are shared by a character, and are typically different poses and facial expressions of that character.
     {
-      "Title": "Default",
-      "Path": "Windfall/Assets/UI/CharacterAssets/TheCalamity/Default"
+      "Title": "Default", //The title should be a simple descriptor of what the expression is
+      "Path": "Windfall/Assets/UI/CharacterAssets/TheCalamity/Default", //The path is where the image file for this expression is stored. these should be pretty standardized across the board.
+      //Below here are values that affect how a portrait is Animated. If your portrait is only one frame, you dont need to worry about these, as seen in the second expression below.
+      "FrameCount": 1, //Simply the amount of frames this portrait has
+      "FrameRate": 0, //Represents the delay between frames
+      "Loop": false, //Determines whether the animation is only played once, or if it loops
+      "HasAnimateCondition": false //Determines whether or not a unique condition, such as only playing during the text crawl, for the animation to play exists
     },
     {
       "Title": "Finality",
       "Path": "Windfall/Assets/UI/CharacterAssets/TheCalamity/Finality"
     }
   ],
-  "PrimaryColor": "#000000",
-  "SecondaryColor": "#FF0000"
+  "Style": "DialogueHelper.Content.UI.Dialogue.DialogueStyles.DefaultDialogueStyle", //The Dialogue Style (what the textbox looks like) used by this character. The full path of the Type representing the style must be inputed. Here we see the Default style. If you want to use this, there's no need to explicity set it here!
+  "TextDelay": 3, //The delay between characters that occurs during the text crawl. 3 is the default.
+  "PrimaryColor": "#000000", //A primary color associated with this character. Is mainly used by the Default Dialogue Style to color the text box. Defaults to standard terraria UI colors.
+  "SecondaryColor": "#FF0000" //A secondary color associated with this character. Is mainly used by the Default Dialogue Style to color the text box. Defaults to standard terraria UI colors.
 }
